style app with css, fix icon url issue, 5 day forecast typo fixed, dark mode feature added, nav and title added along with favicons

--- a/django_weather_project/weatherApp/templates/weatherApp/city_weather.html
+++ b/django_weather_project/weatherApp/templates/weatherApp/city_weather.html
@@ -3,12 +3,12 @@
     <p> {{error_message}} </p>
 {% endif %}
 {% if weather_data %}
-    <h1> {{weather_data.city}} </h1>
-    <h2> {{weather_data.temperature}} </h2>
-    <h3> {{weather_data.description}} </h3>
-    <img src="{{weather_data.icon_url}}" alt="{{weather_data.description}}">
-    <p> {{weather_data.humidity}} </p>
-    <p> {{weather_data.wind_speed}} </p>
+    <h2 style="font-size: 32px; "> {{weather_data.city}} </h2>
+    <h3> {{weather_data.temperature}} &deg;C</h3>
+    <h4> {{weather_data.description}} </h4>
+    <img src="http://openweathermap.org/img/wn/{{weather_data.icon}}.png" alt="{{weather_data.description}}">    
+    <p>Humidity: {{weather_data.humidity}}%</p>
+    <p>Wind Speed: {{weather_data.wind_speed}} km/h </p>
     <!-- <p> {{weather_data.geo_coordinates}} </p>
     <p> {{weather_data.requested_time}} </p>
     <p> {{weather_data.requested_date}} </p> -->
@@ -16,18 +16,17 @@
 
 {% endif %}
 
-{% if daily_forecast %}
-
-<h2> 5 Day Forecasts</h2>
-<div class="forecast-container">
-    {% for forecast in daily_forecasts %}
-        <div class="forecast"></div>
+{% if daily_forecasts %}
+    <h2>5-Day Forecast</h2>
+    <div class="forecast-container">
+        {% for forecast in daily_forecasts %}
+            <div class="forecast">
             <h3> {{forecast.date}} </h3>
             <h4> {{forecast.temperature}} </h4>
             <h5> {{forecast.description}} </h5>
-            <img src="{{forecast.icon_url}}" alt="{{forecast.description}}">
-            <p> {{forecast.humidity}} </p>
-            <p> {{forecast.wind_speed}} </p>
+            <img src="http://openweathermap.org/img/wn/{{forecast.icon}}.png" alt="{{forecast.description}}">            
+            <p> Humidity: {{forecast.humidity}} </p>
+            <p>Wind Speed: {{forecast.wind_speed}} </p>
         </div>
     {% endfor %}
 </div>
